--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@primeuix/themes": "^1.0.3",
@@ -21,7 +23,14 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@pinia/testing": "^1.0.1",
+    "@testing-library/vue": "^8.1.0",
     "@vitejs/plugin-vue": "^5.2.2",
-    "vite": "^6.3.1"
+    "@vitest/coverage-v8": "^3.1.2",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^17.4.4",
+    "msw": "^2.7.5",
+    "vite": "^6.3.1",
+    "vitest": "^3.1.2"
   }
 }
