--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@testing-library/vue": "^8.1.0",
     "@vitejs/plugin-vue": "^5.2.2",
     "@vitest/coverage-v8": "^3.1.2",
+    "@vitest/ui": "^3.1.2",
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^17.4.4",
     "msw": "^2.7.5",
