--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "lodash.get": "^4.4.2",
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.2.0",
     "primeicons": "^7.0.0",
