--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "serve": "vite preview"
   },
   "dependencies": {
     "@primeuix/themes": "^1.0.3",
@@ -16,6 +17,7 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lodash.get": "^4.4.2",
+    "marked": "^15.0.11",
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.2.0",
     "primeicons": "^7.0.0",
@@ -35,6 +37,7 @@
     "happy-dom": "^17.4.4",
     "msw": "^2.7.5",
     "vite": "^6.3.1",
+    "vite-bundle-visualizer": "^1.2.1",
     "vitest": "^3.1.2"
   }
 }
